ci: 8 shards + reuseDriver + useSpa as benchmark configuration